--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -44,7 +44,7 @@
   
             <li class="nav-item">
   
-              <a class="nav-link" href="{% url 'user-logout' %}">Đăng xuất &nbsp; <i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+              <a class="nav-link" href="{% url 'user-logout' %}">Đăng xuất &nbsp; </a>
   
             </li>
   
