--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -47,9 +47,18 @@
               <a class="nav-link" href="{% url 'user-logout' %}">Đăng xuất &nbsp; </a>
   
             </li>
+            &nbsp;     &nbsp;     &nbsp; 
+  
+  
+            <li class="nav-item">
+  
+              <a class="nav-link" href="{% url 'info' %}">Tài khoản &nbsp; </a>
+  
+            </li>
   
   
         </ul>
+  
   
         {% else %}
   
