--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center">
 
-    <a class="navbar-brand main-heading" href="{% url '' %}"> 
+    <a class="navbar-brand main-heading" href="{% url 'homepage' %}"> 
             
       &nbsp; Demo
     
@@ -47,9 +47,18 @@
               <a class="nav-link" href="{% url 'user-logout' %}">Đăng xuất &nbsp; </a>
   
             </li>
+            &nbsp;     &nbsp;     &nbsp; 
+  
+  
+            <li class="nav-item">
+  
+              <a class="nav-link" href="{% url 'info' %}">Tài khoản &nbsp; </a>
+  
+            </li>
   
   
         </ul>
+  
   
         {% else %}
   
