--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -2,6 +2,59 @@
 
 {% block content %}
 
+    <br>
+
+    <h5> Hotel Booking </h5>
+
+    <hr>
+
+    <br>
+
+    <div class="container-fluid " style="width: 80%;">
+        <div class="mx-auto d-block">
+          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class="img-fluid rounded" alt="">
+        </div>
+      </div>
+
+    <br>
+
+    <h5>Popular Hotels</h5>
+
+    <hr>
+
+    <div class="container text-center p-5">
+        <div class="row row-cols-3 row-gap-5 col-gap-5">
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+        </div>
+      </div>
+    <br>
+
+    <h5>Popular destinations</h5>
+
+    <hr>
+
+    <div class="container text-center p-5 ">
+        <div class="row row-cols-auto">
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" class="rounded-circle" style="max-width: 105px;" alt=""></div>
+        </div>
+      </div>
+
+    <br>
+    
+    <hr>
+
     <h5> Xin chào, {{user}}! 👋 </h5>
 
     
