--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -4,7 +4,7 @@
 
     <br>
 
-    <h5> Hotel Booking </h5>
+    <div class="container-fluid text-center"><h5>Hotel booking</h5></div>
 
     <hr>
 
@@ -18,23 +18,23 @@
 
     <br>
 
-    <h5>Popular Hotels</h5>
+    <div class="container-fluid text-center"><h5>Popular Hotels</h5></div>
 
     <hr>
 
     <div class="container text-center p-5">
         <div class="row row-cols-3 row-gap-5 col-gap-5">
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
-          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
+          <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Logo_La_Linea_100x100.png" style="max-width: 200px;" class="rounded" alt=""></div>
         </div>
       </div>
     <br>
 
-    <h5>Popular destinations</h5>
+    <div class="container-fluid text-center"><h5>Popular destinations</h5></div>
 
     <hr>
 
