--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -4,9 +4,9 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h5>Hotel booking</h5></div>
+    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Hotel booking</h3></div>
 
-    <hr>
+    <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
     <br>
 
@@ -18,9 +18,9 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h5>Popular Hotels</h5></div>
+    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Popular Hotels</h3></div>
 
-    <hr>
+    <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
     <div class="container text-center p-5">
         <div class="row row-cols-3 row-gap-5 col-gap-5">
@@ -34,9 +34,9 @@
       </div>
     <br>
 
-    <div class="container-fluid text-center"><h5>Popular destinations</h5></div>
+    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Popular destinations</h3></div>
 
-    <hr>
+    <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
     <div class="container text-center p-5 ">
         <div class="row row-cols-auto">
@@ -53,7 +53,7 @@
 
     <br>
     
-    <hr>
+    <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
     <h5> Xin chào, {{user}}! 👋 </h5>
 
