--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -55,6 +55,20 @@
     
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
+    <br>
+
+    <div class="container-fluid p-5 rounded" style=" background-color: #78C2AD;">
+    
+    <h3>Test1</h3>
+    <h3>Test2</h3>
+    <h3>Test3</h3>
+
+    </div>
+
+    <br>
+
+    <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
+
     <h5> Xin chào, {{user}}! 👋 </h5>
 
     
