--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -1,7 +1,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center">
 
-    <a class="navbar-brand main-heading" href="{% url 'homepage' %}"> 
+  &nbsp; &nbsp; &nbsp;
+
+    <a class="navbar-brand main-heading p-2" href="{% url 'homepage' %}"> 
             
       &nbsp; Demo
     
