--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -4,7 +4,7 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Hotel booking</h3></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Hotel booking</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -18,7 +18,7 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Popular Hotels</h3></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Popular Hotels</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -34,7 +34,7 @@
       </div>
     <br>
 
-    <div class="container-fluid text-center"><h3 style="color: #78C2AD;">Popular destinations</h3></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Popular destinations</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -59,9 +59,11 @@
 
     <div class="container-fluid p-5 rounded" style=" background-color: #78C2AD;">
     
-    <h3>Test1</h3>
-    <h3>Test2</h3>
-    <h3>Test3</h3>
+      <div class="container-fluid p-2" style=" background-color: #f6f6f6; border-radius: 5px;">
+
+        <h3>test</h3>
+
+        </div>
 
     </div>
 
