--- a/app1/templates/app1/info.html
+++ b/app1/templates/app1/info.html
@@ -24,14 +24,14 @@
 
                 <br>
 
-                <h6>Họ: {{user.first_name}}</h6>
+                <h6>Họ: {{user.last_name}} </h6>
 
                 <br>
-                <h6>Tên: {{user.last_name}}</h6>
+                <h6>Tên: {{user.first_name}} </h6>
 
                 <br>
 
-                <a class="btn btn-primary" type="button" href="{% url 'editinfo' %}"> Chỉnh sửa &nbsp; <i class="fa fa-user-plus" aria-hidden="true"></i> </a>
+                <a class="btn btn-primary" type="button" href="{% url 'editinfo' %}"> Chỉnh sửa </a>
 
             </form>
 
