--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -5,7 +5,7 @@
 
     <a class="navbar-brand main-heading p-2" href="{% url 'homepage' %}"> 
             
-      &nbsp; Demo
+      &nbsp; <strong>Demo</strong>
     
     </a>
   
