--- a/app1/templates/app1/room_list.html
+++ b/app1/templates/app1/room_list.html
@@ -5,14 +5,15 @@
 {% block content %}
 
     <h2 class="mt-6 px-6 py-12 text-center">
-        Availabale Rooms
+        Available Rooms
     </h2>
 
-    <div>
+    <div class="grid grid-cols-3 gap-3">
         {% for room in rooms %}
             <div>
                 <a href="#">
-                    <div><img src="{{ room.image.url }}"></div>
+                    <div><img src="{{ room_image.url }}" class=" rounded-t-xl"></div>
+
                     <div>
                         <h2 class=" text ">{{ room.name }}</h2>
                         <p class=" text ">{{ room.price }}</p>
