--- a/app1/templates/app1/room_list.html
+++ b/app1/templates/app1/room_list.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
+<div>
     <h2 class="mt-6 px-6 py-12 text-center">
         Available Rooms
     </h2>
@@ -22,5 +22,21 @@
             </div>
         {% endfor %}
     </div>
+<div>
 
+<div>
+    <h2 class="mt-6 px-6 py-12 text-center"> Hotels </h2>
+    <div>
+        {% for hotel in hotels %}
+        <div>
+            <a href="#">
+                <div>
+                    <h2 class=" text ">{{ hotel.name }}</h2>
+                    <p class=" text ">{{ hotel.rooms.count }} rooms</p>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
+<div>
 {% endblock %}
