--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -60,10 +60,12 @@
     <div class="container-fluid p-5 rounded" style=" background-color: #78C2AD;">
     
       <div class="container-fluid p-2" style=" background-color: #f6f6f6; border-radius: 5px;">
-
-        <h3>test</h3>
-
+  
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+  
         </div>
+  
+    </div>
 
     </div>
 
