--- a/app1/templates/app1/list.html
+++ b/app1/templates/app1/list.html
@@ -12,7 +12,7 @@
     
     <div class="container-fluid p-2" style=" background-color: #f6f6f6; border-radius: 5px;">
 
-      <h3>test</h3>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 
       </div>
 
