--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -57,6 +57,12 @@
               <a class="nav-link" href="{% url 'info' %}">Tài khoản &nbsp; </a>
   
             </li>
+
+            <li class="nav-item">
+  
+              <a class="nav-link" href="{% url 'room_list' %}">List phòng&nbsp; </a>
+  
+            </li>
             
 
   
@@ -91,9 +97,7 @@
         &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
         &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
         &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp;
-        &nbsp;     &nbsp;     &nbsp; &nbsp;             
+            
         
         <form class="d-flex px-5" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
