--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<br>
+
+<h4> Hi, {{user}}! 👋 </h4>
+
     <br>
 
     <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Hotel booking</b></h2></div>
@@ -50,6 +54,9 @@
       </div>
 
     <br>
+
+    <div class="container-fluid text-center"><h3 style="color: #78C2AD;"><b>Search your destination!</b></h3></div>
+
     
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -57,19 +64,18 @@
 
     <div class="container-fluid p-5 rounded" style=" background-color: #78C2AD;">
     
-      <div class="container-fluid p-2" style=" background-color: #f6f6f6; border-radius: 5px;">
-
-        <h3>test</h3>
-
+      <div class="container-fluid p-2" style=" border-radius: 5px;">
+  
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+  
         </div>
-
+  
     </div>
 
     <br>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
-    <h5> Xin chào, {{user}}! 👋 </h5>
 
     
 
