--- a/app1/templates/app1/room_list.html
+++ b/app1/templates/app1/room_list.html
@@ -5,7 +5,8 @@
 {% block content %}
 
 <div>
-    <h2 class="mt-6 px-6 py-12 text-center"> Hotels </h2>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Hotels</b></h2></div>
+
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
     <div>
         <div class="container text-center p-5">
