--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -7,6 +7,7 @@
 <div class="grid grid-cols-5 gap-6">
     </div class="col-span-3">
          <h3>{{hotel.name}}</h3>
+         <img src="{{ hotel.image.url }}" style="max-width: 200px;" alt="loi me may roi">
     </div>
 </div>
 {% endblock %}
