--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -89,17 +89,9 @@
   
   
         {% endif %}
-      
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-        &nbsp;     &nbsp;     &nbsp; &nbsp;     &nbsp;     &nbsp; 
-            
+               
         
-        <form class="d-flex px-5" role="search">
+        <form class="d-flex mx-auto text-center" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-light btn-outline-success" type="submit">Search</button>
         </form>
