--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -13,9 +13,9 @@
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
     <br>
 
-    <div class="container p-5";">
+    <div class="container p-5">
         <div class="mx-auto d-block">
-          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class=" rounded" style="width: 100%; height: 380px; object-fit: cover" alt="">
+          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class=" rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" alt="">
         </div>
       </div>
 
