--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -4,10 +4,17 @@
 
 
 {% block content %}
+<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Booking section</b></h2></div>
+
+<hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
+<br>
+
 <div class="grid grid-cols-5 gap-6">
     </div class="col-span-3">
          <h3>{{hotel.name}}</h3>
+         {% if hotel.image %} 
          <img src="{{ hotel.image.url }}" style="max-width: 200px;" alt="loi me may roi">
+         {% endif %}
     </div>
 </div>
 {% endblock %}
