--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -5,7 +5,7 @@
 
     <a class="navbar-brand main-heading p-2" href="{% url 'homepage' %}"> 
             
-      &nbsp; <strong>Demo</strong>
+      &nbsp; <strong><b style="color: aquamarine;">T</b>ravel <b style="color: aquamarine;">T</b>rove</strong>
     
     </a>
   
@@ -58,6 +58,8 @@
   
             </li>
 
+            &nbsp;     &nbsp;     &nbsp;
+
             <li class="nav-item">
   
               <a class="nav-link" href="{% url 'room_list' %}">List phòng&nbsp; </a>
@@ -89,15 +91,21 @@
   
   
         {% endif %}
-               
+  
         
-        <form class="d-flex mx-auto text-center" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-light btn-outline-success" type="submit">Search</button>
-        </form>
+        
       </div>
-  
-  
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav mx-auto">
+        &nbsp;     &nbsp;     &nbsp; 
+        <li class="nav-item">
+       <form class="d-flex mx-auto text-center" style="max-width: 300px;" role="search">
+        <input class="form-control me-2 rounded-pill shadow-sm" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-light btn-outline-success rounded-pill shadow-sm" type="submit">Search</button>
+      </form> 
+      </li>
+      </ul>     
+      </div>
   </nav>
 
 
