--- a/app1/templates/app1/room_list.html
+++ b/app1/templates/app1/room_list.html
@@ -15,7 +15,8 @@
         <div>
             <a href="{% url 'detail' hotel.id %}">
                 <div>
-                    <div class="col"><img src="https://www.theknot.com/tk-media/images/9a506749-95e9-47cf-857e-5374f2205b93~rs_768.h" style="max-width: 200px; height: 250px; object-fit: cover" class="rounded" alt=""></div>
+                    <div class="col"><img src="https://www.theknot.com/tk-media/images/9a506749-95e9-47cf-857e-5374f2205b93~rs_768.h" style="max-width: 200px; height: 250px; object-fit: cover" class="rounded shadow-lg" alt=""></div>
+                    <br>
                     <h2 class=" text ">{{ hotel.name }}</h2>
                     <p class=" text ">{{ hotel.rooms.count }} rooms</p>
                 </div>
