--- a/app1/templates/app1/room_list.html
+++ b/app1/templates/app1/room_list.html
@@ -4,6 +4,25 @@
 
 {% block content %}
 
+<div class="pb-6 grid grid-cols-4 gap-4 bg-gray-100">
+    <div class="col-span-1">
+        <form method="get" action="{% url 'search' %}">
+            <input name="query" class="w-full py-4 px-6 border rounded-xl" type="text" value="{{ query }}" placeholder="Find a bike, a chair or car...">
+
+            <button class="mt-2 py-4 px-8 text-lg bg-teal-500 text-white rounded-xl">Search</button>
+        </form>
+
+
+        <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
+
+        <p class="font-semibold">Clear filters</p>
+
+        <ul>
+            <li><a href="{% url 'search' %}" class="mt-2 py-4 px-8 inline-block bg-yellow-500 text-lg rounded-xl text-white">Clear</a>
+    </div>
+
+
+
 <div>
     <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Hotels</b></h2></div>
 
