--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -32,7 +32,7 @@
           <div class="col"><img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/22/25/ce/ea/kingsford-hotel-manila.jpg?w=1200&h=-1&s=1" style="max-width: 200px; height: 250px; object-fit: cover" class="rounded" alt=""></div>
           <div class="col"><img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/488042945.jpg?k=775534679a4e00703c8c40aaeba394c5316ea249650df98bfe958956752e4c4d&o=&hp=1" style="max-width: 200px; height: 250px; object-fit: cover" class="rounded" alt=""></div>
           <div class="col"><img src="https://www.richmondehotels.com.ph/wp-content/uploads/2021/09/ortigas_banner.jpg" style="max-width: 200px; height: 250px; object-fit: cover" class="rounded" alt=""></div>
-          <div class="container text-center"><a class="btn btn-primary btn-lg" type="button" href="{% url 'room_list' %}"> Xem thêm </a>
+          <div class="container text-center"><a class="btn btn-primary btn-lg" type="button" href="{% url 'search' %}"> Xem thêm </a>
           </div>
         </div>
       </div>
