--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -62,7 +62,7 @@
 
             <li class="nav-item">
   
-              <a class="nav-link" href="{% url 'room_list' %}">List phòng&nbsp; </a>
+              <a class="nav-link" href="{% url 'search' %}">List phòng&nbsp; </a>
   
             </li>
             
