--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -9,12 +9,161 @@
 <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 <br>
 
-<div class="grid grid-cols-5 gap-6">
-    </div class="col-span-3">
-         <h3>{{hotel.name}}</h3>
-         {% if hotel.image %} 
-         <img src="{{ hotel.image.url }}" style="max-width: 200px;" alt="loi me may roi">
-         {% endif %}
+<div class="container p-3 rounded" style=" background-color: #78C2AD;">
+    <div class="row">
+        <div class="col-3">
+
+            <div class="row">
+                
+                <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; background-color: aliceblue;">
+
+                    <h3>{{hotel.name}}</h3>
+                    {% if hotel.image %} 
+                    <img src="{{ hotel.image.url }}" class="rounded" style="max-width: 200px;" alt="ảnh lỗi r huhu">
+                    {% endif %}
+
+                </div>
+
+                
+            </div>
+            <br>
+            <div class="row">
+                <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; min-height: 200px; background-color: aliceblue;">
+                
+
+                    <br>
+                    <br>
+                    <h3> Test2</h3>
+                
+                </div>
+                
+
+            </div>
+
+
+        </div>
+
+        <div class="col-9">
+
+                <div class="row">
+
+                    <div class="col-10">
+                        <div class="container-fluid p-3 rounded mx-auto px-auto" style="  background-color: aliceblue;" >
+                    
+                        <h2>Testingasdasdasdasdasa</h2>
+
+                        </div>
+                    
+                    </div>
+                        <div class="col-2">
+                            <div class="container-fluid p-3 rounded mx-auto px-auto" style="height: 101%; background-color: aliceblue;">
+                    
+                        <h3>Test3</h3>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; min-height: 250px; background-color: aliceblue;" >
+                    
+                        <h2>Testing</h2>
+
+                        </div>
+
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: aliceblue;" >
+                    
+                        <h2>Testing</h2>
+
+                        </div>
+
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                    
+                            <h2>Testing</h2>
+
+                            </div>
+
+                    </div>
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                    
+                            <h2>Testing</h2>
+
+                            </div>
+
+                    </div>
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                    
+                            <h2>Testing</h2>
+
+                            </div>
+
+                    </div>
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                    
+                            <h2>Testingasd</h2>
+
+                            </div>
+
+                    </div>
+
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: aliceblue;" >
+                    
+                            <h2>Testing</h2>
+
+                            </div>
+
+                    </div>
+
+                    <div class="col">
+
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: aliceblue;" >
+                    
+                            <h2>Testing</h2>
+    
+                            </div>
+
+                    </div>
+
+                </div>
+
+        </div>
+          
     </div>
 </div>
+
+<br>
+
+<br>
 {% endblock %}
